...
                    image: AssetImage('images/backgrounds/filmcrate.png'),
                    fit: BoxFit.cover,
                  ),
                ),
                // gap(),
                padds(
                  'REGISTER',
                  35.0,
                  1.5,
                  const Color(0xff305973),
                  20,
                  0,
                  20,
...
                  0,
                  0,
                  0.5,
                  FontWeight.normal,
                ),
                padds(
                  'Username',
                  35.0,
                  1.0,
                  Colors.black,
                  20,
                  10,
                  0,
...
