...
            context: context,
            color: Colors.red);
      },
      (success) {
        state = state.copyWith(isLoading: false, error: null);
        showSnackBar(
          message: 'Registered successfully',
          context: context,
        );
        Navigator.pushNamed(context, AppRoute.loginRoute);
      },
    );
  }
...
