...
//                           height: isTablet ? 75 : 65.0,
//                           child: ElevatedButton(
//                             onPressed: () {
//                               Navigator.pushNamed(context, AppRoute.loginRoute);
//                             },
//                             child: Text(
//                               'LOGIN',
//                               style: TextStyle(
//                                 fontFamily: 'Dongle',
//                                 fontWeight: FontWeight.w600,
//                                 letterSpacing: 1.2,
//                                 fontSize: isTablet ? 45 : 35.0,
//                               ),
...
