...
        backgroundColor: AppColors.appbarColors,
        toolbarHeight: isTablet ? 110 : 90.0,
        shadowColor: Colors.transparent,
        title: Padding(
          padding: const EdgeInsets.fromLTRB(5, 15, 15, 10),
          child: Text(
            'MOVIE',
            style: TextStyle(
              fontWeight: FontWeight.bold,
              letterSpacing: 1.0,
              fontSize: isTablet ? 45 : 38,
            ),
          ),
...
